[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "inventorygyms"
version = "0.0.1"
dependencies = [
    "gymnasium==0.29.1"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
exclude = ["inventorygyms.tests*", "inventorygyms.invgym*"]  # empty by default
namespaces = false  # true by default